// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopInformationModule clusters view with application renders as expected 1`] = `
<div
  className="module-top-information"
>
  <div
    className="header-container"
  >
    <div
      className="header-title"
    >
      Top violations
    </div>
    <div
      className="header-tab"
    >
      <nav
        aria-label="Top violations undefined"
        className="bx--tabs"
        role="navigation"
        selected={1}
      >
        <div
          aria-label="listbox"
          className="bx--tabs-trigger"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <a
            className="bx--tabs-trigger-text"
            href="#"
            onClick={[Function]}
            tabIndex={-1}
          >
            Clusters
          </a>
          <svg
            alt="show menu options"
            aria-label="show menu options"
            className={undefined}
            fill={undefined}
            fillRule="evenodd"
            height="5"
            name={undefined}
            role="img"
            style={undefined}
            viewBox="0 0 10 5"
            width="10"
          >
            <title>
              show menu options
            </title>
            <path
              d="M0 0l5 4.998L10 0z"
            />
          </svg>
        </div>
        <ul
          className="bx--tabs__nav bx--tabs__nav--hidden"
          role="tablist"
        >
          <li
            className="bx--tabs__nav-item"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="presentation"
            selected={false}
            tabIndex={-1}
          >
            <a
              aria-selected={false}
              className="bx--tabs__nav-link"
              href="#"
              role="tab"
              tabIndex={-1}
            >
              Policies
            </a>
          </li>
          <li
            className="bx--tabs__nav-item bx--tabs__nav-item--selected"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="presentation"
            selected={true}
            tabIndex={-1}
          >
            <a
              aria-selected={true}
              className="bx--tabs__nav-link"
              href="#"
              role="tab"
              tabIndex={0}
            >
              Clusters
            </a>
          </li>
          <li
            className="bx--tabs__nav-item"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="presentation"
            selected={false}
            tabIndex={-1}
          >
            <a
              aria-selected={false}
              className="bx--tabs__nav-link"
              href="#"
              role="tab"
              tabIndex={-1}
            >
              Applications
            </a>
          </li>
        </ul>
      </nav>
      <div
        aria-hidden={true}
        className={undefined}
        hidden={true}
        selected={false}
      />
      <div
        aria-hidden={false}
        className={undefined}
        hidden={false}
        selected={true}
      />
      <div
        aria-hidden={true}
        className={undefined}
        hidden={true}
        selected={false}
      />
    </div>
  </div>
  <div>
    <div
      className="information-card-container"
    >
      <div>
        <div
          className="information-card-container single-strip"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="information-card-content"
          >
            <div
              className="card-inner-content"
            >
              <div
                className="card-informations"
              >
                <div
                  className="card-information-count"
                >
                  3
                </div>
              </div>
              <div
                className="card-name-description"
              >
                <div
                  className="card-name name-clickable"
                >
                  cluster1
                </div>
                <div
                  className="card-description description-clickable"
                >
                  <div
                    className="LinesEllipsis  "
                  >
                    compliance-all, policy-ma, policy-pod
                    <wbr />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          className="information-card-container single-strip"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="information-card-content"
          >
            <div
              className="card-inner-content"
            >
              <div
                className="card-informations"
              >
                <div
                  className="card-information-count"
                >
                  2
                </div>
              </div>
              <div
                className="card-name-description"
              >
                <div
                  className="card-name name-clickable"
                >
                  clusterhub
                </div>
                <div
                  className="card-description description-clickable"
                >
                  <div
                    className="LinesEllipsis  "
                  >
                    compliance-all, policy-pod
                    <wbr />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopInformationModule clusters view with application renders as expected 2`] = `
Array [
  Object {
    "choice": "policies",
    "count": 2,
    "description": Array [
      "cluster1",
      "clusterhub",
    ],
    "itemName": "policy-comp",
    "name": "compliance-all",
    "nameSpace": "mcm",
  },
  Object {
    "choice": "policies",
    "count": 2,
    "description": Array [
      "cluster1",
      "clusterhub",
    ],
    "itemName": "policy-pod",
    "name": "policy-pod",
    "nameSpace": "mcm",
  },
  Object {
    "choice": "policies",
    "count": 1,
    "description": Array [
      "cluster1",
    ],
    "itemName": "policy-ma",
    "name": "policy-ma",
    "nameSpace": "mcm",
  },
]
`;

exports[`TopInformationModule clusters view with application renders as expected 3`] = `
Array [
  Object {
    "choice": "clusters",
    "count": 3,
    "description": Array [
      "compliance-all",
      "policy-ma",
      "policy-pod",
    ],
    "itemName": "policy-comp",
    "name": "cluster1",
    "nameSpace": "mcm",
  },
  Object {
    "choice": "clusters",
    "count": 2,
    "description": Array [
      "compliance-all",
      "policy-pod",
    ],
    "itemName": "policy-comp",
    "name": "clusterhub",
    "nameSpace": "mcm",
  },
]
`;

exports[`TopInformationModule clusters view with application renders as expected 4`] = `
Array [
  Object {
    "choice": "EMPTY_CHOICE",
    "description": Array [
      "We will continue to monitor and display any application policy violations.",
    ],
    "name": "No other application policy violations.",
  },
]
`;

exports[`TopInformationModule clusters view without application renders as expected 1`] = `
<div
  className="module-top-information"
>
  <div
    className="header-container"
  >
    <div
      className="header-title"
    >
      Top violations
    </div>
    <div
      className="header-tab"
    >
      <nav
        aria-label="Top violations undefined"
        className="bx--tabs"
        role="navigation"
        selected={1}
      >
        <div
          aria-label="listbox"
          className="bx--tabs-trigger"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <a
            className="bx--tabs-trigger-text"
            href="#"
            onClick={[Function]}
            tabIndex={-1}
          >
            Clusters
          </a>
          <svg
            alt="show menu options"
            aria-label="show menu options"
            className={undefined}
            fill={undefined}
            fillRule="evenodd"
            height="5"
            name={undefined}
            role="img"
            style={undefined}
            viewBox="0 0 10 5"
            width="10"
          >
            <title>
              show menu options
            </title>
            <path
              d="M0 0l5 4.998L10 0z"
            />
          </svg>
        </div>
        <ul
          className="bx--tabs__nav bx--tabs__nav--hidden"
          role="tablist"
        >
          <li
            className="bx--tabs__nav-item"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="presentation"
            selected={false}
            tabIndex={-1}
          >
            <a
              aria-selected={false}
              className="bx--tabs__nav-link"
              href="#"
              role="tab"
              tabIndex={-1}
            >
              Policies
            </a>
          </li>
          <li
            className="bx--tabs__nav-item bx--tabs__nav-item--selected"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="presentation"
            selected={true}
            tabIndex={-1}
          >
            <a
              aria-selected={true}
              className="bx--tabs__nav-link"
              href="#"
              role="tab"
              tabIndex={0}
            >
              Clusters
            </a>
          </li>
        </ul>
      </nav>
      <div
        aria-hidden={true}
        className={undefined}
        hidden={true}
        selected={false}
      />
      <div
        aria-hidden={false}
        className={undefined}
        hidden={false}
        selected={true}
      />
    </div>
  </div>
  <div>
    <div
      className="information-card-container"
    >
      <div>
        <div
          className="information-card-container single-strip"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="information-card-content"
          >
            <div
              className="card-inner-content"
            >
              <div
                className="card-informations"
              >
                <div
                  className="card-information-count"
                >
                  3
                </div>
              </div>
              <div
                className="card-name-description"
              >
                <div
                  className="card-name name-clickable"
                >
                  cluster1
                </div>
                <div
                  className="card-description description-clickable"
                >
                  <div
                    className="LinesEllipsis  "
                  >
                    compliance-all, policy-ma, policy-pod
                    <wbr />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          className="information-card-container single-strip"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="information-card-content"
          >
            <div
              className="card-inner-content"
            >
              <div
                className="card-informations"
              >
                <div
                  className="card-information-count"
                >
                  2
                </div>
              </div>
              <div
                className="card-name-description"
              >
                <div
                  className="card-name name-clickable"
                >
                  clusterhub
                </div>
                <div
                  className="card-description description-clickable"
                >
                  <div
                    className="LinesEllipsis  "
                  >
                    compliance-all, policy-pod
                    <wbr />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopInformationModule clusters view without application renders as expected 2`] = `
Array [
  Object {
    "choice": "policies",
    "count": 2,
    "description": Array [
      "cluster1",
      "clusterhub",
    ],
    "itemName": "policy-comp",
    "name": "compliance-all",
    "nameSpace": "mcm",
  },
  Object {
    "choice": "policies",
    "count": 2,
    "description": Array [
      "cluster1",
      "clusterhub",
    ],
    "itemName": "policy-pod",
    "name": "policy-pod",
    "nameSpace": "mcm",
  },
  Object {
    "choice": "policies",
    "count": 1,
    "description": Array [
      "cluster1",
    ],
    "itemName": "policy-ma",
    "name": "policy-ma",
    "nameSpace": "mcm",
  },
]
`;

exports[`TopInformationModule clusters view without application renders as expected 3`] = `
Array [
  Object {
    "choice": "clusters",
    "count": 3,
    "description": Array [
      "compliance-all",
      "policy-ma",
      "policy-pod",
    ],
    "itemName": "policy-comp",
    "name": "cluster1",
    "nameSpace": "mcm",
  },
  Object {
    "choice": "clusters",
    "count": 2,
    "description": Array [
      "compliance-all",
      "policy-pod",
    ],
    "itemName": "policy-comp",
    "name": "clusterhub",
    "nameSpace": "mcm",
  },
]
`;

exports[`TopInformationModule clusters view without application renders as expected 4`] = `
Array [
  Object {
    "choice": "EMPTY_CHOICE",
    "description": Array [
      "We will continue to monitor and display any application policy violations.",
    ],
    "name": "No other application policy violations.",
  },
]
`;

exports[`TopInformationModule findings clusters view renders as expected 1`] = `
<div
  className="module-top-information"
>
  <div
    className="header-container"
  >
    <div
      className="header-title"
    >
      Top security findings
    </div>
    <div
      className="header-tab"
    >
      <nav
        aria-label="Top security findings undefined"
        className="bx--tabs"
        role="navigation"
        selected={1}
      >
        <div
          aria-label="listbox"
          className="bx--tabs-trigger"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <a
            className="bx--tabs-trigger-text"
            href="#"
            onClick={[Function]}
            tabIndex={-1}
          >
            Clusters
          </a>
          <svg
            alt="show menu options"
            aria-label="show menu options"
            className={undefined}
            fill={undefined}
            fillRule="evenodd"
            height="5"
            name={undefined}
            role="img"
            style={undefined}
            viewBox="0 0 10 5"
            width="10"
          >
            <title>
              show menu options
            </title>
            <path
              d="M0 0l5 4.998L10 0z"
            />
          </svg>
        </div>
        <ul
          className="bx--tabs__nav bx--tabs__nav--hidden"
          role="tablist"
        >
          <li
            className="bx--tabs__nav-item"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="presentation"
            selected={false}
            tabIndex={-1}
          >
            <a
              aria-selected={false}
              className="bx--tabs__nav-link"
              href="#"
              role="tab"
              tabIndex={-1}
            >
              Security findings
            </a>
          </li>
          <li
            className="bx--tabs__nav-item bx--tabs__nav-item--selected"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="presentation"
            selected={true}
            tabIndex={-1}
          >
            <a
              aria-selected={true}
              className="bx--tabs__nav-link"
              href="#"
              role="tab"
              tabIndex={0}
            >
              Clusters
            </a>
          </li>
        </ul>
      </nav>
      <div
        aria-hidden={true}
        className={undefined}
        hidden={true}
        selected={false}
      />
      <div
        aria-hidden={false}
        className={undefined}
        hidden={false}
        selected={true}
      />
    </div>
  </div>
  <div>
    <div
      className="information-card-container"
    >
      <div>
        <div
          className="information-card-container single-strip"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="information-card-content"
          >
            <div
              className="card-inner-content"
            >
              <div
                className="card-informations"
              >
                <div
                  className="card-information-count"
                >
                  1
                </div>
              </div>
              <div
                className="card-name-description"
              >
                <div
                  className="card-name name-clickable"
                >
                  mycluster_name
                </div>
                <div
                  className="card-description description-clickable"
                >
                  <div
                    className="LinesEllipsis  "
                  >
                    Policy that is not compliant
                    <wbr />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          className="information-card-container single-strip"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="information-card-content"
          >
            <div
              className="card-inner-content"
            >
              <div
                className="card-informations"
              >
                <div
                  className="card-information-count"
                >
                  1
                </div>
              </div>
              <div
                className="card-name-description"
              >
                <div
                  className="card-name name-clickable"
                >
                  cluster1
                </div>
                <div
                  className="card-description description-clickable"
                >
                  <div
                    className="LinesEllipsis  "
                  >
                    Policy that is not compliant
                    <wbr />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          className="information-card-container single-strip"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="information-card-content"
          >
            <div
              className="card-inner-content"
            >
              <div
                className="card-informations"
              >
                <div
                  className="card-information-count"
                >
                  1
                </div>
              </div>
              <div
                className="card-name-description"
              >
                <div
                  className="card-name name-clickable"
                >
                  clusterhub
                </div>
                <div
                  className="card-description description-clickable"
                >
                  <div
                    className="LinesEllipsis  "
                  >
                    Policy that is not compliant
                    <wbr />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopInformationModule findings clusters view renders as expected 2`] = `
Array [
  Object {
    "choice": "security findings",
    "count": 3,
    "description": Array [
      "mycluster_name",
      "cluster1",
      "clusterhub",
    ],
    "itemName": undefined,
    "name": "Policy that is not compliant",
    "nameSpace": "kube-system",
  },
]
`;

exports[`TopInformationModule findings clusters view renders as expected 3`] = `
Array [
  Object {
    "choice": "finding clusters",
    "count": 1,
    "description": Array [
      "Policy that is not compliant",
    ],
    "itemName": undefined,
    "name": "mycluster_name",
    "nameSpace": "kube-system",
  },
  Object {
    "choice": "finding clusters",
    "count": 1,
    "description": Array [
      "Policy that is not compliant",
    ],
    "itemName": undefined,
    "name": "cluster1",
    "nameSpace": "kube-system",
  },
  Object {
    "choice": "finding clusters",
    "count": 1,
    "description": Array [
      "Policy that is not compliant",
    ],
    "itemName": undefined,
    "name": "clusterhub",
    "nameSpace": "kube-system",
  },
]
`;

exports[`TopInformationModule findings clusters view renders as expected 4`] = `
Array [
  Object {
    "choice": "security findings",
    "count": 3,
    "description": Array [
      "mycluster_name",
      "cluster1",
      "clusterhub",
    ],
    "itemName": undefined,
    "name": "Policy that is not compliant",
    "nameSpace": "kube-system",
  },
]
`;

exports[`TopInformationModule findings view renders as expected 1`] = `
<div
  className="module-top-information"
>
  <div
    className="header-container"
  >
    <div
      className="header-title"
    >
      Top security findings
    </div>
    <div
      className="header-tab"
    >
      <nav
        aria-label="Top security findings undefined"
        className="bx--tabs"
        role="navigation"
        selected={0}
      >
        <div
          aria-label="listbox"
          className="bx--tabs-trigger"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <a
            className="bx--tabs-trigger-text"
            href="#"
            onClick={[Function]}
            tabIndex={-1}
          >
            Security findings
          </a>
          <svg
            alt="show menu options"
            aria-label="show menu options"
            className={undefined}
            fill={undefined}
            fillRule="evenodd"
            height="5"
            name={undefined}
            role="img"
            style={undefined}
            viewBox="0 0 10 5"
            width="10"
          >
            <title>
              show menu options
            </title>
            <path
              d="M0 0l5 4.998L10 0z"
            />
          </svg>
        </div>
        <ul
          className="bx--tabs__nav bx--tabs__nav--hidden"
          role="tablist"
        >
          <li
            className="bx--tabs__nav-item bx--tabs__nav-item--selected"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="presentation"
            selected={true}
            tabIndex={-1}
          >
            <a
              aria-selected={true}
              className="bx--tabs__nav-link"
              href="#"
              role="tab"
              tabIndex={0}
            >
              Security findings
            </a>
          </li>
          <li
            className="bx--tabs__nav-item"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="presentation"
            selected={false}
            tabIndex={-1}
          >
            <a
              aria-selected={false}
              className="bx--tabs__nav-link"
              href="#"
              role="tab"
              tabIndex={-1}
            >
              Clusters
            </a>
          </li>
        </ul>
      </nav>
      <div
        aria-hidden={false}
        className={undefined}
        hidden={false}
        selected={true}
      />
      <div
        aria-hidden={true}
        className={undefined}
        hidden={true}
        selected={false}
      />
    </div>
  </div>
  <div>
    <div
      className="information-card-container"
    >
      <div>
        <div
          className="information-card-container single-strip"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="information-card-content"
          >
            <div
              className="card-inner-content"
            >
              <div
                className="card-informations"
              >
                <div
                  className="card-information-count"
                >
                  3
                </div>
              </div>
              <div
                className="card-name-description"
              >
                <div
                  className="card-name name-clickable"
                >
                  Policy that is not compliant
                </div>
                <div
                  className="card-description description-clickable"
                >
                  <div
                    className="LinesEllipsis  "
                  >
                    mycluster_name, cluster1, clusterhub
                    <wbr />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopInformationModule findings view renders as expected 2`] = `
Array [
  Object {
    "choice": "security findings",
    "count": 3,
    "description": Array [
      "mycluster_name",
      "cluster1",
      "clusterhub",
    ],
    "itemName": undefined,
    "name": "Policy that is not compliant",
    "nameSpace": "kube-system",
  },
]
`;

exports[`TopInformationModule findings view renders as expected 3`] = `
Array [
  Object {
    "choice": "finding clusters",
    "count": 1,
    "description": Array [
      "Policy that is not compliant",
    ],
    "itemName": undefined,
    "name": "mycluster_name",
    "nameSpace": "kube-system",
  },
  Object {
    "choice": "finding clusters",
    "count": 1,
    "description": Array [
      "Policy that is not compliant",
    ],
    "itemName": undefined,
    "name": "cluster1",
    "nameSpace": "kube-system",
  },
  Object {
    "choice": "finding clusters",
    "count": 1,
    "description": Array [
      "Policy that is not compliant",
    ],
    "itemName": undefined,
    "name": "clusterhub",
    "nameSpace": "kube-system",
  },
]
`;

exports[`TopInformationModule findings view renders as expected 4`] = `
Array [
  Object {
    "choice": "security findings",
    "count": 3,
    "description": Array [
      "mycluster_name",
      "cluster1",
      "clusterhub",
    ],
    "itemName": undefined,
    "name": "Policy that is not compliant",
    "nameSpace": "kube-system",
  },
]
`;

exports[`TopInformationModule policies view with application renders as expected 1`] = `
<div
  className="module-top-information"
>
  <div
    className="header-container"
  >
    <div
      className="header-title"
    >
      Top violations
    </div>
    <div
      className="header-tab"
    >
      <nav
        aria-label="Top violations undefined"
        className="bx--tabs"
        role="navigation"
        selected={0}
      >
        <div
          aria-label="listbox"
          className="bx--tabs-trigger"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <a
            className="bx--tabs-trigger-text"
            href="#"
            onClick={[Function]}
            tabIndex={-1}
          >
            Policies
          </a>
          <svg
            alt="show menu options"
            aria-label="show menu options"
            className={undefined}
            fill={undefined}
            fillRule="evenodd"
            height="5"
            name={undefined}
            role="img"
            style={undefined}
            viewBox="0 0 10 5"
            width="10"
          >
            <title>
              show menu options
            </title>
            <path
              d="M0 0l5 4.998L10 0z"
            />
          </svg>
        </div>
        <ul
          className="bx--tabs__nav bx--tabs__nav--hidden"
          role="tablist"
        >
          <li
            className="bx--tabs__nav-item bx--tabs__nav-item--selected"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="presentation"
            selected={true}
            tabIndex={-1}
          >
            <a
              aria-selected={true}
              className="bx--tabs__nav-link"
              href="#"
              role="tab"
              tabIndex={0}
            >
              Policies
            </a>
          </li>
          <li
            className="bx--tabs__nav-item"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="presentation"
            selected={false}
            tabIndex={-1}
          >
            <a
              aria-selected={false}
              className="bx--tabs__nav-link"
              href="#"
              role="tab"
              tabIndex={-1}
            >
              Clusters
            </a>
          </li>
          <li
            className="bx--tabs__nav-item"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="presentation"
            selected={false}
            tabIndex={-1}
          >
            <a
              aria-selected={false}
              className="bx--tabs__nav-link"
              href="#"
              role="tab"
              tabIndex={-1}
            >
              Applications
            </a>
          </li>
        </ul>
      </nav>
      <div
        aria-hidden={false}
        className={undefined}
        hidden={false}
        selected={true}
      />
      <div
        aria-hidden={true}
        className={undefined}
        hidden={true}
        selected={false}
      />
      <div
        aria-hidden={true}
        className={undefined}
        hidden={true}
        selected={false}
      />
    </div>
  </div>
  <div>
    <div
      className="information-card-container"
    >
      <div>
        <div
          className="information-card-container single-strip"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="information-card-content"
          >
            <div
              className="card-inner-content"
            >
              <div
                className="card-informations"
              >
                <div
                  className="card-information-count"
                >
                  2
                </div>
              </div>
              <div
                className="card-name-description"
              >
                <div
                  className="card-name name-clickable"
                >
                  1558374675051-policy-pod
                </div>
                <div
                  className="card-description description-clickable"
                >
                  <div
                    className="LinesEllipsis  "
                  >
                    cluster1, clusterhub
                    <wbr />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          className="information-card-container single-strip"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="information-card-content"
          >
            <div
              className="card-inner-content"
            >
              <div
                className="card-informations"
              >
                <div
                  className="card-information-count"
                >
                  2
                </div>
              </div>
              <div
                className="card-name-description"
              >
                <div
                  className="card-name name-clickable"
                >
                  1558382034240-policy-pod
                </div>
                <div
                  className="card-description description-clickable"
                >
                  <div
                    className="LinesEllipsis  "
                  >
                    cluster1, clusterhub
                    <wbr />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          className="information-card-container single-strip"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="information-card-content"
          >
            <div
              className="card-inner-content"
            >
              <div
                className="card-informations"
              >
                <div
                  className="card-information-count"
                >
                  2
                </div>
              </div>
              <div
                className="card-name-description"
              >
                <div
                  className="card-name name-clickable"
                >
                  policy-pod
                </div>
                <div
                  className="card-description description-clickable"
                >
                  <div
                    className="LinesEllipsis  "
                  >
                    cluster1, clusterhub
                    <wbr />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopInformationModule policies view with application renders as expected 2`] = `
Array [
  Object {
    "choice": "policies",
    "count": 2,
    "description": Array [
      "cluster1",
      "clusterhub",
    ],
    "itemName": "1558374675051-policy-pod",
    "name": "1558374675051-policy-pod",
    "nameSpace": "mcm",
  },
  Object {
    "choice": "policies",
    "count": 2,
    "description": Array [
      "cluster1",
      "clusterhub",
    ],
    "itemName": "1558382034240-policy-pod",
    "name": "1558382034240-policy-pod",
    "nameSpace": "mcm",
  },
  Object {
    "choice": "policies",
    "count": 2,
    "description": Array [
      "cluster1",
      "clusterhub",
    ],
    "itemName": "policy-pod",
    "name": "policy-pod",
    "nameSpace": "mcm",
  },
]
`;

exports[`TopInformationModule policies view with application renders as expected 3`] = `
Array [
  Object {
    "choice": "clusters",
    "count": 3,
    "description": Array [
      "1558374675051-policy-pod",
      "1558382034240-policy-pod",
      "policy-pod",
    ],
    "itemName": "cluster1",
    "name": "cluster1",
    "nameSpace": "mcm",
  },
  Object {
    "choice": "clusters",
    "count": 3,
    "description": Array [
      "1558374675051-policy-pod",
      "1558382034240-policy-pod",
      "policy-pod",
    ],
    "itemName": "clusterhub",
    "name": "clusterhub",
    "nameSpace": "mcm",
  },
]
`;

exports[`TopInformationModule policies view with application renders as expected 4`] = `
Array [
  Object {
    "choice": "EMPTY_CHOICE",
    "description": Array [
      "We will continue to monitor and display any application policy violations.",
    ],
    "name": "No other application policy violations.",
  },
]
`;

exports[`TopInformationModule policies view without application renders as expected 1`] = `
<div
  className="module-top-information"
>
  <div
    className="header-container"
  >
    <div
      className="header-title"
    >
      Top violations
    </div>
    <div
      className="header-tab"
    >
      <nav
        aria-label="Top violations undefined"
        className="bx--tabs"
        role="navigation"
        selected={0}
      >
        <div
          aria-label="listbox"
          className="bx--tabs-trigger"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <a
            className="bx--tabs-trigger-text"
            href="#"
            onClick={[Function]}
            tabIndex={-1}
          >
            Policies
          </a>
          <svg
            alt="show menu options"
            aria-label="show menu options"
            className={undefined}
            fill={undefined}
            fillRule="evenodd"
            height="5"
            name={undefined}
            role="img"
            style={undefined}
            viewBox="0 0 10 5"
            width="10"
          >
            <title>
              show menu options
            </title>
            <path
              d="M0 0l5 4.998L10 0z"
            />
          </svg>
        </div>
        <ul
          className="bx--tabs__nav bx--tabs__nav--hidden"
          role="tablist"
        >
          <li
            className="bx--tabs__nav-item bx--tabs__nav-item--selected"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="presentation"
            selected={true}
            tabIndex={-1}
          >
            <a
              aria-selected={true}
              className="bx--tabs__nav-link"
              href="#"
              role="tab"
              tabIndex={0}
            >
              Policies
            </a>
          </li>
          <li
            className="bx--tabs__nav-item"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="presentation"
            selected={false}
            tabIndex={-1}
          >
            <a
              aria-selected={false}
              className="bx--tabs__nav-link"
              href="#"
              role="tab"
              tabIndex={-1}
            >
              Clusters
            </a>
          </li>
        </ul>
      </nav>
      <div
        aria-hidden={false}
        className={undefined}
        hidden={false}
        selected={true}
      />
      <div
        aria-hidden={true}
        className={undefined}
        hidden={true}
        selected={false}
      />
    </div>
  </div>
  <div>
    <div
      className="information-card-container"
    >
      <div>
        <div
          className="information-card-container single-strip"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="information-card-content"
          >
            <div
              className="card-inner-content"
            >
              <div
                className="card-informations"
              >
                <div
                  className="card-information-count"
                >
                  2
                </div>
              </div>
              <div
                className="card-name-description"
              >
                <div
                  className="card-name name-clickable"
                >
                  1558374675051-policy-pod
                </div>
                <div
                  className="card-description description-clickable"
                >
                  <div
                    className="LinesEllipsis  "
                  >
                    cluster1, clusterhub
                    <wbr />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          className="information-card-container single-strip"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="information-card-content"
          >
            <div
              className="card-inner-content"
            >
              <div
                className="card-informations"
              >
                <div
                  className="card-information-count"
                >
                  2
                </div>
              </div>
              <div
                className="card-name-description"
              >
                <div
                  className="card-name name-clickable"
                >
                  1558382034240-policy-pod
                </div>
                <div
                  className="card-description description-clickable"
                >
                  <div
                    className="LinesEllipsis  "
                  >
                    cluster1, clusterhub
                    <wbr />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          className="information-card-container single-strip"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="information-card-content"
          >
            <div
              className="card-inner-content"
            >
              <div
                className="card-informations"
              >
                <div
                  className="card-information-count"
                >
                  2
                </div>
              </div>
              <div
                className="card-name-description"
              >
                <div
                  className="card-name name-clickable"
                >
                  policy-pod
                </div>
                <div
                  className="card-description description-clickable"
                >
                  <div
                    className="LinesEllipsis  "
                  >
                    cluster1, clusterhub
                    <wbr />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopInformationModule policies view without application renders as expected 2`] = `
Array [
  Object {
    "choice": "policies",
    "count": 2,
    "description": Array [
      "cluster1",
      "clusterhub",
    ],
    "itemName": "1558374675051-policy-pod",
    "name": "1558374675051-policy-pod",
    "nameSpace": "mcm",
  },
  Object {
    "choice": "policies",
    "count": 2,
    "description": Array [
      "cluster1",
      "clusterhub",
    ],
    "itemName": "1558382034240-policy-pod",
    "name": "1558382034240-policy-pod",
    "nameSpace": "mcm",
  },
  Object {
    "choice": "policies",
    "count": 2,
    "description": Array [
      "cluster1",
      "clusterhub",
    ],
    "itemName": "policy-pod",
    "name": "policy-pod",
    "nameSpace": "mcm",
  },
]
`;

exports[`TopInformationModule policies view without application renders as expected 3`] = `
Array [
  Object {
    "choice": "clusters",
    "count": 3,
    "description": Array [
      "1558374675051-policy-pod",
      "1558382034240-policy-pod",
      "policy-pod",
    ],
    "itemName": "cluster1",
    "name": "cluster1",
    "nameSpace": "mcm",
  },
  Object {
    "choice": "clusters",
    "count": 3,
    "description": Array [
      "1558374675051-policy-pod",
      "1558382034240-policy-pod",
      "policy-pod",
    ],
    "itemName": "clusterhub",
    "name": "clusterhub",
    "nameSpace": "mcm",
  },
]
`;

exports[`TopInformationModule policies view without application renders as expected 4`] = `
Array [
  Object {
    "choice": "EMPTY_CHOICE",
    "description": Array [
      "We will continue to monitor and display any application policy violations.",
    ],
    "name": "No other application policy violations.",
  },
]
`;
